// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalogue view Renders correctly for a successful call 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col"
  >
    <div
      class="bg-white"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              >
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/our-roasters"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Unsere Röster
                  </span>
                </a>
              </div>
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="/"
            >
              <span
                class="sr-only"
              >
                Famous Roasters
              </span>
              <div
                class="xl:hidden font-syne text-3xl"
              >
                <span>
                  F
                </span>
                <span
                  class="font-extrabold"
                >
                  R
                </span>
              </div>
              <div
                class="hidden xl:block font-syne text-xl text-center"
              >
                <div
                  class="h-5"
                >
                  Famous
                </div>
                <div
                  class="font-extrabold"
                >
                  Roasters
                </div>
              </div>
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/about"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/contact"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Kontakt
                    </span>
                  </a>
                </div>
                <a
                  class="hidden xl:block p-2 text-gray-400 hover:text-gray-500 xl:ml-6"
                  href="/account"
                >
                  <span
                    class="sr-only"
                  >
                    Konto
                  </span>
                  <svg
                    aria-hidden="true"
                    class="w-6 h-6"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </a>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      0
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <div
          class="flex"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="mr-6"
            data-testid="tab-forYou"
            role="tab"
            type="button"
          >
            <span
              class="text-coreUI-text-secondary pb-1.5 text-sm leading-5"
            >
              Für Dich
            </span>
          </button>
          <button
            aria-selected="true"
            class="mr-6"
            data-testid="tab-discover"
            role="tab"
            type="button"
          >
            <span
              class="text-brand-black font-semibold border-b-2 pb-1.5 text-sm leading-5"
            >
              Entdecken
            </span>
          </button>
        </div>
        <div
          class="flex justify-end mt-8"
        >
          <div
            class="w-1/2 md:w-1/3 xl:w-1/5"
          >
            <div
              class="w-full relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button"
                id="headlessui-listbox-button-1"
                type="button"
              >
                <span
                  class="block truncate text-sm leading-5"
                >
                  Sortieren nach...
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
        />
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="78.301"
              cy="78.301"
              fill="#D4FF81"
              r="63.932"
              transform="rotate(15 78.3 78.301)"
            />
            <path
              d="m71.539 68.784-.427 1.595-8.082-2.166-1.22 4.552 6.615 1.772-.428 1.595-6.614-1.772-1.63 6.083-1.702-.456 3.705-13.825 9.783 2.622Zm-1.577 14.394 3.885-14.501 17.515 4.693c1.375.368 2.564.857 3.566 1.465 1.022.598 1.753 1.344 2.193 2.24.455.898.515 1.975.179 3.229-.223.83-.558 1.477-1.006 1.94a3.362 3.362 0 0 1-1.586.935c-.61.16-1.272.218-1.989.171a14.185 14.185 0 0 1-2.196-.321l-1.57-.76c1.794.496 3.156.942 4.086 1.337.946.4 1.559.83 1.84 1.294.299.453.36 1.012.182 1.676l-.832 3.105-5.665-1.518.65-2.425c.121-.453.122-.817.001-1.092-.101-.286-.434-.554-1-.802-.549-.245-1.428-.529-2.636-.853l-8.86-2.373-1.093 4.078-5.664-1.518Zm7.771-6.344 11.85 3.175c.454.121.852.147 1.194.077.358-.066.593-.31.707-.734.105-.392.017-.7-.264-.92-.261-.232-.619-.409-1.072-.53l-11.85-3.176-.565 2.108Z"
              fill="#000"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/our-roasters"
              >
                Unsere Röster
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/about"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/jobs"
              >
                Jobs
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/privacy"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/press"
              >
                Presse
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/imprint"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Kunden Support
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden?
              </span>
            </div>
            <div
              class="mt-6"
            >
              <button
                class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                role="button"
                type="button"
              >
                Kunden Support
                 
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 ml-2"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z"
                  />
                  <path
                    d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="mt-12"
          >
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Newsletter
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Melde dich für den Newsletter an und erhalte, einmalige Angebote, Neuigkeiten, Tipps und Insights zum Thema Specialty Coffee und neuen Röstern. 
              </span>
            </div>
            <form>
              <div
                class="mt-6"
              >
                <label
                  class="relative"
                >
                  <span
                    class="absolute -top-6 left-3 px-2 bg-brand-black text-white"
                  >
                    <span
                      class="text-sm leading-5"
                    >
                      Deine E-Mail
                    </span>
                  </span>
                  <input
                    class="w-72 border rounded-full px-4 py-2 bg-brand-black border-white text-white"
                    data-testid="newsletter-email"
                    name="email"
                    placeholder="max.mustermann@email.com"
                    type="text"
                  />
                </label>
              </div>
              <div
                class="mt-6"
              >
                <button
                  class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                  data-testid="newsletter-submit"
                  role="button"
                  type="submit"
                >
                  Anmelden
                </button>
              </div>
            </form>
            <div
              class="mt-4"
            >
              <span
                class="text-brand-grey-bombay text-base leading-6"
              >
                Hinweis: Sie können sich jederzeit abmelden. Siehe unsere Datenschutzrichtlinie und Bedingungen.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 Famous Roasters. Alle Rechte vorbehalten
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Geröstet mit ❤️ in Berlin
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Catalogue view Renders correctly for a successful call with missing data 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col"
  >
    <div
      class="bg-white"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              >
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/our-roasters"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Unsere Röster
                  </span>
                </a>
              </div>
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="/"
            >
              <span
                class="sr-only"
              >
                Famous Roasters
              </span>
              <div
                class="xl:hidden font-syne text-3xl"
              >
                <span>
                  F
                </span>
                <span
                  class="font-extrabold"
                >
                  R
                </span>
              </div>
              <div
                class="hidden xl:block font-syne text-xl text-center"
              >
                <div
                  class="h-5"
                >
                  Famous
                </div>
                <div
                  class="font-extrabold"
                >
                  Roasters
                </div>
              </div>
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/about"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/contact"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Kontakt
                    </span>
                  </a>
                </div>
                <a
                  class="hidden xl:block p-2 text-gray-400 hover:text-gray-500 xl:ml-6"
                  href="/account"
                >
                  <span
                    class="sr-only"
                  >
                    Konto
                  </span>
                  <svg
                    aria-hidden="true"
                    class="w-6 h-6"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </a>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      0
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <div
          class="flex"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="mr-6"
            data-testid="tab-forYou"
            role="tab"
            type="button"
          >
            <span
              class="text-coreUI-text-secondary pb-1.5 text-sm leading-5"
            >
              Für Dich
            </span>
          </button>
          <button
            aria-selected="true"
            class="mr-6"
            data-testid="tab-discover"
            role="tab"
            type="button"
          >
            <span
              class="text-brand-black font-semibold border-b-2 pb-1.5 text-sm leading-5"
            >
              Entdecken
            </span>
          </button>
        </div>
        <div
          class="flex justify-end mt-8"
        >
          <div
            class="w-1/2 md:w-1/3 xl:w-1/5"
          >
            <div
              class="w-full relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button"
                id="headlessui-listbox-button-3"
                type="button"
              >
                <span
                  class="block truncate text-sm leading-5"
                >
                  Sortieren nach...
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
        />
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="78.301"
              cy="78.301"
              fill="#D4FF81"
              r="63.932"
              transform="rotate(15 78.3 78.301)"
            />
            <path
              d="m71.539 68.784-.427 1.595-8.082-2.166-1.22 4.552 6.615 1.772-.428 1.595-6.614-1.772-1.63 6.083-1.702-.456 3.705-13.825 9.783 2.622Zm-1.577 14.394 3.885-14.501 17.515 4.693c1.375.368 2.564.857 3.566 1.465 1.022.598 1.753 1.344 2.193 2.24.455.898.515 1.975.179 3.229-.223.83-.558 1.477-1.006 1.94a3.362 3.362 0 0 1-1.586.935c-.61.16-1.272.218-1.989.171a14.185 14.185 0 0 1-2.196-.321l-1.57-.76c1.794.496 3.156.942 4.086 1.337.946.4 1.559.83 1.84 1.294.299.453.36 1.012.182 1.676l-.832 3.105-5.665-1.518.65-2.425c.121-.453.122-.817.001-1.092-.101-.286-.434-.554-1-.802-.549-.245-1.428-.529-2.636-.853l-8.86-2.373-1.093 4.078-5.664-1.518Zm7.771-6.344 11.85 3.175c.454.121.852.147 1.194.077.358-.066.593-.31.707-.734.105-.392.017-.7-.264-.92-.261-.232-.619-.409-1.072-.53l-11.85-3.176-.565 2.108Z"
              fill="#000"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/our-roasters"
              >
                Unsere Röster
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/about"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/jobs"
              >
                Jobs
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/privacy"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/press"
              >
                Presse
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/imprint"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Kunden Support
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden?
              </span>
            </div>
            <div
              class="mt-6"
            >
              <button
                class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                role="button"
                type="button"
              >
                Kunden Support
                 
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 ml-2"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z"
                  />
                  <path
                    d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="mt-12"
          >
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Newsletter
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Melde dich für den Newsletter an und erhalte, einmalige Angebote, Neuigkeiten, Tipps und Insights zum Thema Specialty Coffee und neuen Röstern. 
              </span>
            </div>
            <form>
              <div
                class="mt-6"
              >
                <label
                  class="relative"
                >
                  <span
                    class="absolute -top-6 left-3 px-2 bg-brand-black text-white"
                  >
                    <span
                      class="text-sm leading-5"
                    >
                      Deine E-Mail
                    </span>
                  </span>
                  <input
                    class="w-72 border rounded-full px-4 py-2 bg-brand-black border-white text-white"
                    data-testid="newsletter-email"
                    name="email"
                    placeholder="max.mustermann@email.com"
                    type="text"
                  />
                </label>
              </div>
              <div
                class="mt-6"
              >
                <button
                  class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                  data-testid="newsletter-submit"
                  role="button"
                  type="submit"
                >
                  Anmelden
                </button>
              </div>
            </form>
            <div
              class="mt-4"
            >
              <span
                class="text-brand-grey-bombay text-base leading-6"
              >
                Hinweis: Sie können sich jederzeit abmelden. Siehe unsere Datenschutzrichtlinie und Bedingungen.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 Famous Roasters. Alle Rechte vorbehalten
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Geröstet mit ❤️ in Berlin
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Catalogue view Renders correctly for an error call 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col"
  >
    <div
      class="bg-white"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              >
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
                <a
                  class="flex items-center text-gray-700 hover:text-gray-800"
                  href="/our-roasters"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Unsere Röster
                  </span>
                </a>
              </div>
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="/"
            >
              <span
                class="sr-only"
              >
                Famous Roasters
              </span>
              <div
                class="xl:hidden font-syne text-3xl"
              >
                <span>
                  F
                </span>
                <span
                  class="font-extrabold"
                >
                  R
                </span>
              </div>
              <div
                class="hidden xl:block font-syne text-xl text-center"
              >
                <div
                  class="h-5"
                >
                  Famous
                </div>
                <div
                  class="font-extrabold"
                >
                  Roasters
                </div>
              </div>
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/about"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="/contact"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Kontakt
                    </span>
                  </a>
                </div>
                <a
                  class="hidden xl:block p-2 text-gray-400 hover:text-gray-500 xl:ml-6"
                  href="/account"
                >
                  <span
                    class="sr-only"
                  >
                    Konto
                  </span>
                  <svg
                    aria-hidden="true"
                    class="w-6 h-6"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </a>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      0
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <div
          class="flex"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="mr-6"
            data-testid="tab-forYou"
            role="tab"
            type="button"
          >
            <span
              class="text-coreUI-text-secondary pb-1.5 text-sm leading-5"
            >
              Für Dich
            </span>
          </button>
          <button
            aria-selected="true"
            class="mr-6"
            data-testid="tab-discover"
            role="tab"
            type="button"
          >
            <span
              class="text-brand-black font-semibold border-b-2 pb-1.5 text-sm leading-5"
            >
              Entdecken
            </span>
          </button>
        </div>
        <div
          class="flex justify-end mt-8"
        >
          <div
            class="w-1/2 md:w-1/3 xl:w-1/5"
          >
            <div
              class="w-full relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button"
                id="headlessui-listbox-button-2"
                type="button"
              >
                <span
                  class="block truncate text-sm leading-5"
                >
                  Sortieren nach...
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="p-4 border border-coreUI-border bg-white"
        >
          <div
            class="text-center text-base leading-6"
          >
            Ein Fehler ist aufgetreten
          </div>
          <div
            class="mt-4 flex justify-center"
          >
            <button
              class="inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
              data-testid="button-prompt"
              role="button"
            >
              Erneut versuchen
            </button>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="78.301"
              cy="78.301"
              fill="#D4FF81"
              r="63.932"
              transform="rotate(15 78.3 78.301)"
            />
            <path
              d="m71.539 68.784-.427 1.595-8.082-2.166-1.22 4.552 6.615 1.772-.428 1.595-6.614-1.772-1.63 6.083-1.702-.456 3.705-13.825 9.783 2.622Zm-1.577 14.394 3.885-14.501 17.515 4.693c1.375.368 2.564.857 3.566 1.465 1.022.598 1.753 1.344 2.193 2.24.455.898.515 1.975.179 3.229-.223.83-.558 1.477-1.006 1.94a3.362 3.362 0 0 1-1.586.935c-.61.16-1.272.218-1.989.171a14.185 14.185 0 0 1-2.196-.321l-1.57-.76c1.794.496 3.156.942 4.086 1.337.946.4 1.559.83 1.84 1.294.299.453.36 1.012.182 1.676l-.832 3.105-5.665-1.518.65-2.425c.121-.453.122-.817.001-1.092-.101-.286-.434-.554-1-.802-.549-.245-1.428-.529-2.636-.853l-8.86-2.373-1.093 4.078-5.664-1.518Zm7.771-6.344 11.85 3.175c.454.121.852.147 1.194.077.358-.066.593-.31.707-.734.105-.392.017-.7-.264-.92-.261-.232-.619-.409-1.072-.53l-11.85-3.176-.565 2.108Z"
              fill="#000"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/our-roasters"
              >
                Unsere Röster
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/about"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/jobs"
              >
                Jobs
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/privacy"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/press"
              >
                Presse
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/imprint"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Kunden Support
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden?
              </span>
            </div>
            <div
              class="mt-6"
            >
              <button
                class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                role="button"
                type="button"
              >
                Kunden Support
                 
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 ml-2"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z"
                  />
                  <path
                    d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="mt-12"
          >
            <div>
              <span
                class="font-syne text-3xl leading-8 font-semibold tracking-tight"
              >
                Newsletter
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Melde dich für den Newsletter an und erhalte, einmalige Angebote, Neuigkeiten, Tipps und Insights zum Thema Specialty Coffee und neuen Röstern. 
              </span>
            </div>
            <form>
              <div
                class="mt-6"
              >
                <label
                  class="relative"
                >
                  <span
                    class="absolute -top-6 left-3 px-2 bg-brand-black text-white"
                  >
                    <span
                      class="text-sm leading-5"
                    >
                      Deine E-Mail
                    </span>
                  </span>
                  <input
                    class="w-72 border rounded-full px-4 py-2 bg-brand-black border-white text-white"
                    data-testid="newsletter-email"
                    name="email"
                    placeholder="max.mustermann@email.com"
                    type="text"
                  />
                </label>
              </div>
              <div
                class="mt-6"
              >
                <button
                  class="inline-flex items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
                  data-testid="newsletter-submit"
                  role="button"
                  type="submit"
                >
                  Anmelden
                </button>
              </div>
            </form>
            <div
              class="mt-4"
            >
              <span
                class="text-brand-grey-bombay text-base leading-6"
              >
                Hinweis: Sie können sich jederzeit abmelden. Siehe unsere Datenschutzrichtlinie und Bedingungen.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 Famous Roasters. Alle Rechte vorbehalten
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Geröstet mit ❤️ in Berlin
        </span>
      </div>
    </footer>
  </div>
</div>
`;
